--- a/404.html
+++ b/404.html
@@ -1,25 +1,8 @@
 ---
 permalink: /404.html
 layout: page
+top-image: "assets/images/panetonne.jpg"
+title: 404 Page Not Found
+image-description: One of my last breakfasts during my exchange in Canada. Panetonne and maple syrup. I have a feeling I am eating it wrong.
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
